CRUD anunciante + Collection Postman

--- a/server/servija/src/main/resources/application.properties
+++ b/server/servija/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.url=jdbc:mysql://sql260.main-hosting.eu:3306/u388670503_servij
 spring.datasource.username=u388670503_servija
 spring.datasource.password=fIcadU7!
 spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
