--- a/server/servija/src/main/resources/application.properties
+++ b/server/servija/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.username=u388670503_servija
 spring.datasource.password=fIcadU7!
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.datasource.tomcat.test-on-borrow=true
